# foundation-models-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs  ctk_probe.swift
examples/: 01_hello.rs  02_streaming.rs  03_instructions.rs  04_options.rs  05_async.rs  06_smoke.rs  07_schema_surface.rs  08_async_respond.rs  09_async_adapter.rs
src/: async_api.rs  content.rs  error.rs  lib.rs  prompt.rs  schema.rs  tool.rs  transcript.rs
src/ffi/: mod.rs
src/generation/: mod.rs
src/model/: mod.rs
src/session/: mod.rs
swift-bridge/: Package.swift
swift-bridge/Sources/FoundationModelsBridge/: Async.swift  BridgeJSON.swift  ErrorBridge.swift  FoundationModels.swift  ModelBridge.swift  SchemaBridge.swift  SessionExtras.swift  ToolsBridge.swift
swift-bridge/Sources/FoundationModelsBridge/include/: FoundationModelsBridge.h
tests/: api_coverage.rs  async_api_tests.rs  generation_integration.rs  model_integration.rs  public_api_helpers.rs  session_integration.rs  tool_integration.rs  transcript_integration.rs
